# mdocspoofer

./: .gitignore  README.md  setup.cfg  setup.py
mdocspoofer/: __init__.py  mdoc.py
