[metadata]
name = mdocspoofer
url = https://github.com/alisterburt/mdocspoofer
author = Alister Burt
author_email = alisterburt@gmail.com
description = spoof SerialEM mdoc files from images collected in Tomography v5 from ThermoFisher
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD license
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source Code =https://github.com/alisterburt/mdocspoofer

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools_scm
; install_requires =
    ; numpy

[options.extras_require]
testing =
    pytest
dev =
    ipython
    jedi<0.18.0
    black
    flake8
    flake8-docstrings
    isort
    mypy
    pre-commit
    pydocstyle
    pytest
    jupyter-book


[bdist_wheel]
universal = 1

[flake8]
exclude = docs,_version.py,.eggs,examples
max-line-length = 88
docstring-convention = numpy
ignore =  D100, D213, D401, D413, D107, W503

[isort]
profile = black
src_paths = mdocspoofer

[pydocstyle]
match_dir = mdocspoofer
convention = numpy
add_select = D402,D415,D417
ignore = D100, D213, D401, D413, D107

[tool:pytest]
addopts = -W error

[mypy]
files = mdocspoofer
warn_unused_configs = True
warn_unused_ignores = True
check_untyped_defs = True
implicit_reexport = False
# this is strict!
# disallow_untyped_defs = True
show_column_numbers = True
show_error_codes = True
ignore_missing_imports = True


